--- a/css/styles.css
+++ b/css/styles.css
@@ -8452,6 +8452,13 @@ textarea.form-control-lg {
   visibility: hidden !important;
 }
 
+#location div[role="dialog"] button {
+  scale: 0.7;
+  right: -20px;
+  height: 30px !important;
+  padding-bottom: 10px !important;
+}
+
 @media (min-width: 576px) {
   .float-sm-start {
     float: left !important;
